# Tokioto

./: .env.local.example  .gitignore  DEPLOYMENT.md  package.json  playwright.config.ts  pnpm-lock.yaml  vercel.json  vitest.config.mts
.github/workflows/: deploy-nextjs.yml  deploy-worker.yml
docs/superpowers/plans/: 2026-04-17-tokioto-music-web.md
docs/superpowers/specs/: 2026-04-17-tokioto-music-web-design.md
e2e/: setup.spec.ts
public/: manifest.json  sw.js
scripts/: reset-pattern.ts
src/: middleware.ts  proxy.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/import/: page.tsx
src/app/login/: page.tsx
src/app/player/: page.tsx
src/app/playlists/: page.tsx
src/app/setup/: page.tsx
src/components/Auth/: PatternLock.tsx
src/components/Import/: ImportForm.tsx  JobHistory.tsx
src/components/Layout/: AnimatedChildren.tsx  Sidebar.tsx  TabBar.tsx
src/components/Player/: Controls.tsx  MiniPlayer.tsx  QueuePanel.tsx  Vinyl.tsx
src/contexts/: PlayerContext.tsx
src/hooks/: useMediaSession.ts  useOfflineCache.ts  usePlayer.ts
src/lib/: db.ts  oembed.ts  pattern.ts  r2.ts  require-auth.ts  session.ts  url-parser.ts  worker-client.ts
src/types/: index.ts
supabase/: config.toml
supabase/migrations/: 20260417000001_init.sql  20260417000002_increment_play.sql  20260417000003_import_jobs_queued_at.sql
tests/: oembed.test.ts  pattern.test.ts  r2.test.ts  session.test.ts  url-parser.test.ts
worker/: Dockerfile  README.md  pyproject.toml
worker/app/: db.py  extractor.py  main.py  storage.py
worker/tests/: test_extractor.py
(+27 files in other folders)
