[project]
name = "tokioto-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "yt-dlp>=2024.12.13",
  "supabase>=2.9",
  "boto3>=1.35",
  "colorthief>=0.2.1",
  "pydantic>=2.9",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]
